# Wireframe-AI

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  commit_msg.txt  docker-compose.yml  pr_description.md  provider-config.example.toml  submission.json  submission.txt
.cargo/: config.toml
.devin/: SCHEMA-STANDARD.md  TECHNICAL-PATTERNS.md  agents.md  config.json  hooks.v1.json
.devin/hooks/: session-start.sh
.devin/rules/: rust-coding-style.md  rust-hooks.md  rust-patterns-wireframe.md  rust-patterns.md  rust-security.md  rust-testing-wireframe.md  rust-testing.md
.devin/scripts/: add-cargo-context.ps1  add-edit-context.ps1  add-prompt-context.ps1  add-workflow-or-skill.ps1  build.ps1  clean.ps1  configure-autonomous-hooks.ps1  configure-mcp-servers.ps1  configure-playbook-automation.ps1  coverage.ps1  deps.ps1  first-failing-test.ps1  hook-incident-alert.ps1  playbook-code-review.ps1  playbook-dependency-upgrade.ps1  playbook-feature-flag-removal.ps1  playbook-test-addition.ps1  session-init.ps1  start-autonomous-mode.ps1  test.ps1  validate-environment.ps1
.devin/skills/: SKILL-QUALITY-STANDARDS.md  eval_skills.py  improve.md
.github/workflows/: ci.yml
.teams/TEAM_003/: plan.md
.teams/TEAM_007/: TEAM_007_tui_enhancement.md  plan.md
.teams/active/: TEAM_001_tui_module_runner.md  TEAM_002_tui_chat_extensible.md  TEAM_006_scripts_enhancement.md  TEAM_018_jcode_1to1_rewrite.md  TEAM_019_tui_nats_integration.md  TEAM_020_selfdev_mode.md
adapter/python/: add_provider.py  providers.json  pyproject.toml
adapter/python/src/: adapter.py
adapter/rust/: Cargo.toml
adapter/rust/src/: lib.rs  main.rs  mcp_client.rs  provider_config.rs  security.rs  selfdev.rs  tools.rs  utils.rs
adapter/rust/tests/: adapter_test.rs  streaming_test.rs
benchmarks/: Cargo.toml  README.md  plugin_benchmarks.rs
config/: Cargo.toml
config/src/: lib.rs  retry.rs
configs/: build-config.json  context-default.yaml  interface-default.yaml  orchestrator-default.yaml  orchestrator-enhanced.yaml  production.yaml  sandbox-default.yaml  sandbox-enhanced.yaml  sandbox.yaml
docs/: DOCUMENTATION-REORGANIZATION-PLAN.md  README.md
examples/: Cargo.toml  README.md
examples/cache-module/: Cargo.toml
examples/cache-module/src/: main.rs
examples/chatbot-app/: Cargo.toml
examples/chatbot-app/src/: main.rs
examples/configurations/: complete-system.yaml  minimal-system.yaml
examples/echo-module/: Cargo.toml
examples/echo-module/src/: main.rs
examples/file-watcher-module/: Cargo.toml
examples/file-watcher-module/src/: main.rs
examples/health-check-module/: Cargo.toml
examples/health-check-module/src/: main.rs
examples/logger-module/: Cargo.toml
examples/logger-module/src/: main.rs
examples/metrics-module/: Cargo.toml
examples/metrics-module/src/: main.rs
examples/ping-module/: Cargo.toml  README.md
examples/ping-module/src/: main.rs
examples/rate-limiter-module/: Cargo.toml
examples/rate-limiter-module/src/: main.rs
examples/router-module/: Cargo.toml
examples/router-module/src/: main.rs
examples/validator-module/: Cargo.toml
examples/validator-module/src/: main.rs
examples/webhook-receiver/: Cargo.toml
examples/webhook-receiver/src/: main.rs
examples/workflow-agent/: Cargo.toml
examples/workflow-agent/src/: main.rs
kernel/interface/: Cargo.toml
kernel/interface/src/: main.rs
modules/context-core/: Cargo.toml
modules/context-core/src/: context_core.rs  lib.rs  main.rs
modules/context-core/tests/: integration_test.rs
modules/event-sourcing-core/: Cargo.toml  Dockerfile
modules/event-sourcing-core/src/: main.rs
modules/integrations-core/: Cargo.toml  Dockerfile
modules/integrations-core/src/: main.rs
modules/interface-core/: Cargo.toml
modules/interface-core/src/: interface_core.rs  lib.rs  main.rs
modules/interface-core/tests/: integration_test.rs
modules/observability-core/: Cargo.toml  Dockerfile
modules/observability-core/src/: main.rs
modules/orchestrator-core/: Cargo.toml
modules/orchestrator-core/src/: lib.rs  main.rs  orchestrator_core.rs
modules/orchestrator-core/tests/: integration_test.rs
modules/provider-core/: Cargo.toml
modules/provider-core/src/: config.rs  discovery.rs  lib.rs  marketplace.rs  router.rs  testing.rs
modules/provider-core/tests/: config_test.rs  router_test.rs
modules/provider-router-core/: Cargo.toml  Dockerfile
modules/provider-router-core/src/: main.rs
modules/sandbox-core/: Cargo.toml
modules/sandbox-core/src/: lib.rs  main.rs  sandbox_core.rs
modules/sandbox-core/tests/: integration_test.rs
modules/tenant-core/: Cargo.toml  Dockerfile
modules/tenant-core/src/: main.rs
modules/webhooks-core/: Cargo.toml  Dockerfile
modules/webhooks-core/src/: main.rs
monitoring/: Cargo.toml  README.md  metrics.rs  tracing.rs
providers/anthropic/: Cargo.toml
providers/anthropic/src/: lib.rs
providers/cohere/: Cargo.toml
providers/cohere/src/: lib.rs
providers/google/: Cargo.toml
providers/google/src/: lib.rs
scripts/: README.md  build-release.ps1  common.ps1  cross-build.ps1  download-nats.ps1  load-test.sh  process-manager.ps1  run-demo.ps1  run-tui-runner.ps1  smoke-test.ps1  start-all.ps1  start-all.sh
tools/: Cargo.toml
tools/tui-minimal/: README.md  tui-config.toml
tools/tui-minimal/tui-config/: Cargo.toml
tools/tui-minimal/tui-config/src/: lib.rs
tools/tui-minimal/tui-core/: Cargo.toml
tools/tui-minimal/tui-core/src/: lib.rs  plugin.rs
tools/tui-minimal/tui-input/: Cargo.toml
tools/tui-minimal/tui-input/src/: lib.rs
tools/tui-minimal/tui-main/: Cargo.toml
tools/tui-minimal/tui-main/src/: command_palette.rs  main.rs
tools/tui-minimal/tui-nats/: Cargo.toml
tools/tui-minimal/tui-nats/src/: lib.rs
tools/tui-minimal/tui-render/: Cargo.toml
tools/tui-minimal/tui-render/src/: lib.rs
tools/wireframe-cli/: Cargo.toml
tools/wireframe-cli/src/: main.rs
tools/wireframe-debug/: Cargo.toml
tools/wireframe-debug/src/: main.rs
tools/wireframe-replay/: Cargo.toml
tools/wireframe-replay/src/: main.rs
(+323 files in other folders)
