[package]
name = "wireframe-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
notify = "6"
