[package]
name = "chatbot-app"
version = "0.1.0"
edition = "2021"
description = "Example chatbot application using Wireframe-AI"

[[bin]]
name = "chatbot-app"
path = "src/main.rs"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
async-nats = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
