[package]
name = "echo-module"
version = "0.1.0"
edition = "2021"
description = "Wireframe AI example — echo/request-response module"

[[bin]]
name = "echo-module"
path = "src/main.rs"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
agentic-sdk-macros = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
