[package]
name = "ping-module"
version = "0.1.0"
edition = "2021"
description = "Example Wireframe AI module — replies to ping messages"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
async-nats = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
