[package]
name = "wireframe-ai-context-core"
version = "0.1.0"
edition = "2021"
description = "Context core orchestration — NATS communication and plugin management"

[dependencies]
agentic-sdk = { workspace = true, features = ["schema-validation", "macros"] }
wireframe-config = { path = "../../config" }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "signal"] }
async-nats = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }

# Built-in plugin crates loaded by plugin_id at runtime
wireframe-ai-storage-sqlite = { package = "storage-sqlite", path = "../../plugins/context/storage-sqlite" }
wireframe-ai-memory-fts5 = { package = "memory-fts5", path = "../../plugins/context/memory-fts5" }
wireframe-ai-enrichment-env = { package = "enrichment-env", path = "../../plugins/context/enrichment-env" }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "wireframe-ai-context-core"
path = "src/main.rs"
