[package]
name = "wireframe-ai-event-sourcing-core"
version = "0.1.0"
edition = "2021"
description = "Event sourcing and audit log module for Wireframe AI"

[[bin]]
name = "wireframe-ai-event-sourcing-core"
path = "src/main.rs"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

# Persistence
rusqlite = { workspace = true }
