[package]
name = "wireframe-ai-interface-core"
version = "0.1.0"
edition = "2021"
description = "Interface core orchestration — CLI with plugin support"

[features]
schema-validation = ["agentic-sdk/schema-validation"]

[dependencies]
agentic-sdk = { workspace = true, features = ["schema-validation", "macros"] }
wireframe-config = { path = "../../config" }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "signal"] }
async-nats = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Built-in plugin crates loaded by plugin_id at runtime
wireframe-ai-input-cli = { package = "input-cli", path = "../../plugins/interface/input-cli" }
wireframe-ai-output-markdown = { package = "output-markdown", path = "../../plugins/interface/output-markdown" }

[dev-dependencies]
tokio-test = "0.4"
