[package]
name = "wireframe-ai-observability-core"
version = "0.1.0"
edition = "2021"
description = "Observability module (metrics, traces, logs) for Wireframe AI"

[[bin]]
name = "wireframe-ai-observability-core"
path = "src/main.rs"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Persistence
rusqlite = { workspace = true }
