[package]
name = "wireframe-provider-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "wireframe_provider_core"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
