[package]
name = "wireframe-ai-provider-router-core"
version = "0.1.0"
edition = "2021"
description = "Multi-provider routing with cost optimization for Wireframe AI"

[[bin]]
name = "wireframe-ai-provider-router-core"
path = "src/main.rs"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
wireframe-provider-core = { path = "../provider-core" }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
