[package]
name = "wireframe-ai-tenant-core"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant-core isolation and management for Wireframe AI"

[[bin]]
name = "wireframe-ai-tenant-core"
path = "src/main.rs"

[dependencies]
agentic-sdk = { workspace = true, features = ["macros"] }
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Persistence
rusqlite = { workspace = true }
