[package]
name = "wireframe-provider-anthropic"
version = "0.1.0"
edition = "2021"
description = "Anthropic Claude provider for Wireframe-AI"

[lib]
name = "wireframe_provider_anthropic"
path = "src/lib.rs"

[dependencies]
wireframe-provider-core = { path = "../../modules/provider-core" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { workspace = true }
